--- a/Tables Moles/src/main/res/drawable/blues_borders.xml
+++ b/Tables Moles/src/main/res/drawable/blues_borders.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#FF465661" />
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item >
+        <shape  android:shape="rectangle">
+            <solid android:color="@color/bluws" />
+            <corners android:bottomRightRadius="35dp" android:bottomLeftRadius="30dp" />
+
         </shape>
     </item>
-    <item   android:bottom="1dp"  >
+    <item   android:bottom="2dp"  >
         <shape android:shape="rectangle">
-            <solid android:color="@color/bluws" />
+            <solid android:color="@color/sul_back" />
+
+
         </shape>
     </item>
 </layer-list>
