--- a/Tables Moles/src/main/res/drawable/green_borders.xml
+++ b/Tables Moles/src/main/res/drawable/green_borders.xml
@@ -2,12 +2,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FF465661" />
+            <solid android:color="@color/gree" />
+            <corners android:bottomRightRadius="35dp" android:bottomLeftRadius="30dp" />
+
         </shape>
     </item>
-    <item   android:bottom="1dp"  >
+    <item   android:bottom="2dp"  >
         <shape android:shape="rectangle">
-            <solid android:color="@color/gree" />
+            <solid android:color="@color/sul_back" />
+
         </shape>
     </item>
 </layer-list>
