--- a/Tables Moles/src/main/res/drawable/nonmetal_borders.xml
+++ b/Tables Moles/src/main/res/drawable/nonmetal_borders.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/redo" />
+            <solid android:color="@color/yell" />
             <corners android:bottomRightRadius="35dp" android:bottomLeftRadius="30dp" />
 
         </shape>
