--- a/Tables Moles/src/main/res/drawable/green_borders2.xml
+++ b/Tables Moles/src/main/res/drawable/green_borders2.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/yell" />
-            <corners android:bottomRightRadius="10dp" android:bottomLeftRadius="10dp" />
+            <solid android:color="@color/gree" />
+
         </shape>
     </item>
     <item   android:bottom="2dp"  >
@@ -12,5 +12,4 @@
 
         </shape>
     </item>
-
 </layer-list>
