--- a/Tables Moles/src/main/res/layout/activity_table_home.xml
+++ b/Tables Moles/src/main/res/layout/activity_table_home.xml
@@ -28,12 +28,13 @@
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view2"
         android:layout_width="250dp"
+        android:layout_marginTop="30dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_table_home"
-        app:itemTextColor="#f0f0ff"
-        app:menu="@menu/activity_table_home_drawer"
-        android:background="#3b4e5b" />
+        app:headerLayout="@layout/content_sort"
+        android:background="#3b4e5b"
+
+        />
 
 </android.support.v4.widget.DrawerLayout>
