--- a/Tables Moles/src/main/res/layout/activity_molar_calculater.xml
+++ b/Tables Moles/src/main/res/layout/activity_molar_calculater.xml
@@ -40,7 +40,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@drawable/ic_menu_camera"
-            android:id="@+id/camer_Button" />
+            android:id="@+id/Cam_Btn" />
 
 
         <Button
