--- a/Tables Moles/src/main/res/layout-land/activity_sulobility.xml
+++ b/Tables Moles/src/main/res/layout-land/activity_sulobility.xml
@@ -6,10 +6,13 @@
                 android:layout_height="match_parent"
 
                 tools:context="king.echomood.periodictable.Sulobility">
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/linearLayout5">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <king.echomood.periodictable.TableMainLayout
             android:layout_width="wrap_content"
