--- a/Tables Moles/src/main/res/layout/activity_sulobility.xml
+++ b/Tables Moles/src/main/res/layout/activity_sulobility.xml
@@ -12,16 +12,16 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/linearLayout5">
+        >
 
         <king.echomood.periodictable.TableMainLayout
             android:layout_width="wrap_content"
             android:id="@+id/custem_table"
-            android:layout_height="match_parent"
->
+            android:layout_height="match_parent">
 
         </king.echomood.periodictable.TableMainLayout>
     </ScrollView>
+    <!--
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -165,7 +165,7 @@
 
     </LinearLayout>
 
-
+    -->
 
 
 
