--- a/Tables Moles/src/main/res/layout/activity_molar_calculater.xml
+++ b/Tables Moles/src/main/res/layout/activity_molar_calculater.xml
@@ -55,7 +55,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/linearLayout6"
@@ -71,6 +71,8 @@
             android:textSize="30sp"
             android:layout_marginTop="60dp"
             android:gravity="center_horizontal" />
+
+
 
     </LinearLayout>
 </RelativeLayout>
