--- a/Tables Moles/src/main/res/layout/content_table_home.xml
+++ b/Tables Moles/src/main/res/layout/content_table_home.xml
@@ -13,8 +13,6 @@
                           tools:context="king.echomood.periodictable.HomePage"
         >
 
-
-
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -22,7 +20,9 @@
             android:layout_alignLeft="@+id/linearLayout2"
             android:layout_gravity="left"
             android:id="@+id/GG"
-            android:layout_alignStart="@+id/linearLayout2"></GridLayout>
+            android:layout_alignStart="@+id/linearLayout2">
+
+        </GridLayout>
 
 
     </HorizontalScrollView>
