--- a/Tables Moles/src/main/res/layout/content_table_home.xml
+++ b/Tables Moles/src/main/res/layout/content_table_home.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent" android:layout_height="fill_parent"
+            android:layout_width="fill_parent" android:layout_height="1000dp"
             xmlns:tools="http://schemas.android.com/tools"
             android:scrollbars="vertical"
-            tools:showIn="@layout/app_bar_table_home"
+
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:background="#2f3d47">
     <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           tools:context="king.echomood.periodictable.HomePage"
         >
-
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
