--- a/Tables Moles/src/main/res/layout/activity_molar_calculater.xml
+++ b/Tables Moles/src/main/res/layout/activity_molar_calculater.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_molar_calculater"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="king.echomood.periodictable.MolarCalculater">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/activity_molar_calculater"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                tools:context="king.echomood.periodictable.MolarCalculater"
+                android:background="@color/focus_box_corner">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -39,8 +40,8 @@
         <ImageButton
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/ic_menu_camera"
-            android:id="@+id/Cam_Btn" />
+            android:background="@drawable/ic_menu_share"
+            android:id="@+id/share_molar_btn" />
 
 
         <Button
@@ -58,10 +59,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/linearLayout6"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="match_parent"
