before final for search fragments

--- a/Tables Moles/src/main/res/layout/activity_table_home.xml
+++ b/Tables Moles/src/main/res/layout/activity_table_home.xml
@@ -7,12 +7,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="#2f3d47"
     tools:openDrawer="start">
 
     <include
+
         layout="@layout/content_table_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="610dp"/>
 
 
 
