--- a/Tables Moles/src/main/res/layout-land/activity_sulobility.xml
+++ b/Tables Moles/src/main/res/layout-land/activity_sulobility.xml
@@ -9,7 +9,7 @@
 
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="570dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
