--- a/Tables Moles/src/main/res/layout/activity_molar_calculater.xml
+++ b/Tables Moles/src/main/res/layout/activity_molar_calculater.xml
@@ -8,8 +8,9 @@
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
+                android:background="#f0f0f0f0"
                 tools:context="king.echomood.periodictable.MolarCalculater"
-                android:background="@color/focus_box_corner">
+    >
 
     <LinearLayout
         android:orientation="horizontal"
@@ -19,17 +20,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:id="@+id/linearLayout4">
-
-
         <EditText
             android:layout_width="match_parent"
             android:hint="write the formela here"
             android:layout_height="wrap_content"
             android:id="@+id/Main_furmela_text"
             android:layout_marginLeft="30dp" />
-
-
     </LinearLayout>
+
     <LinearLayout
         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
@@ -58,19 +56,19 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:layout_below="@+id/linearLayout6"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text=" "
+
             android:id="@+id/elem_text"
             android:textSize="30sp"
-            android:layout_marginTop="60dp"
             android:gravity="center_horizontal" />
-
 
 
     </LinearLayout>
