--- a/Tables Moles/src/main/res/layout/activity_sulobility.xml
+++ b/Tables Moles/src/main/res/layout/activity_sulobility.xml
@@ -10,8 +10,9 @@
 
 
     <ScrollView
+        android:background="@color/sul_back"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="710dp"
         >
 
         <king.echomood.periodictable.TableMainLayout
@@ -21,153 +22,6 @@
 
         </king.echomood.periodictable.TableMainLayout>
     </ScrollView>
-    <!--
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/linearLayout5">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_marginTop="20dp"
-            android:padding="10dp"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-                android:layout_weight="0.5"
-
-                >
-
-                <TextView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:text="S"
-
-                    android:textAlignment="center"
-                    android:textColor="@color/gree"
-                    android:background="@drawable/green_borders2"
-                    android:textSize="20dp"
-                    android:gravity="center_vertical|center_horizontal"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:text="SOLUBLE"
-                    android:textSize="15dp"
-                    android:textColor="@android:color/white"
-                    />
-                </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-                android:layout_marginLeft="25dp"
-                android:layout_weight="0.5">
-
-                <TextView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:text="I"
-
-                    android:textAlignment="center"
-                    android:textColor="@color/redo"
-                    android:background="@drawable/redo_borders2"
-                    android:textSize="20dp"
-                    android:gravity="center_vertical|center_horizontal"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:text="INSOLUBLE"
-                    android:textSize="15dp"
-                    android:textColor="@android:color/white"
-                    />
-            </LinearLayout>
-
-
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-                android:layout_weight="0.5">
-
-                <TextView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:text="P"
-
-                    android:textAlignment="center"
-                    android:textColor="@color/yell"
-                    android:background="@drawable/yellow_borders2"
-                    android:textSize="20dp"
-                    android:gravity="center_vertical|center_horizontal"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:text="POORLY Soluble"
-                    android:textSize="15dp"
-                    android:textColor="@android:color/white"
-                    />
-
-                </LinearLayout>
-            <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:orientation="horizontal"
-            android:layout_weight="0.5">
-                <TextView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:text="-"
-
-                    android:textAlignment="center"
-                    android:textColor="@color/bluws"
-                    android:background="@drawable/blues_borders2"
-                    android:textSize="20dp"
-                    android:gravity="center_vertical|center_horizontal"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:text="DESCOMPOSITION"
-                    android:textSize="13dp"
-                    android:textColor="@android:color/white"
-                    />
-                </LinearLayout>
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    -->
-
-
 
 
 </RelativeLayout>
