--- a/Tables Moles/src/main/res/layout/content_sort.xml
+++ b/Tables Moles/src/main/res/layout/content_sort.xml
@@ -18,7 +18,8 @@
                   android:layout_width="250dp"
 
                   android:background="#3b4e5b"
-                  android:layout_height="match_parent">
+                  android:layout_height="match_parent"
+                  android:layout_marginLeft="10dp">
 
 
     <LinearLayout
