--- a/Tables Moles/src/main/res/layout/content_table_home.xml
+++ b/Tables Moles/src/main/res/layout/content_table_home.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent" android:layout_height="1000dp"
+            android:layout_margin="10dp"
+            android:layout_width="fill_parent"
+            android:layout_height="1000dp"
             xmlns:tools="http://schemas.android.com/tools"
             android:scrollbars="vertical"
-
+            android:id="@+id/periodic_table_view"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:background="#2f3d47">
     <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -18,6 +20,9 @@
             android:layout_alignLeft="@+id/linearLayout2"
             android:layout_gravity="left"
             android:id="@+id/GG"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
             android:layout_alignStart="@+id/linearLayout2">
 
         </GridLayout>
