--- a/Tables Moles/src/main/res/menu/table_home.xml
+++ b/Tables Moles/src/main/res/menu/table_home.xml
@@ -2,9 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/show_sort"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         android:icon="@drawable/sorting"
         app:showAsAction="always"/>
+
+    <item   android:id="@+id/action_share"
+            android:orderInCategory="100"
+            android:title="@string/action_settings"
+            android:icon="@drawable/ic_menu_share"
+            app:showAsAction="always"/>
+
 </menu>
